# dalcedo-tui

./: .gitignore  README.md  pyproject.toml
src/dalcedo/: __init__.py  __main__.py  app.py
src/dalcedo/config/: __init__.py  settings.py  storage.py
src/dalcedo/connectors/: __init__.py  base.py  bigquery.py  registry.py
src/dalcedo/models/: __init__.py  conversation.py
src/dalcedo/screens/: __init__.py  chat.py  login.py  sync.py
src/dalcedo/services/: __init__.py  bigquery.py  dbt.py  duckdb.py  sync.py  tracing.py
src/dalcedo/services/llm/: __init__.py  agent.py  anthropic.py  base.py  gemini.py  openai.py
src/dalcedo/styles/: app.tcss
src/dalcedo/widgets/: __init__.py  command_input.py  message_list.py
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_connectors.py  test_services.py
